--- a/docker-python3/Dockerfile
+++ b/docker-python3/Dockerfile
@@ -44,7 +44,7 @@ RUN dpkg-reconfigure --frontend noninteractive tzdata
 # Install conda (mamba version)
 ENV CONDA_DIR /opt/conda
 RUN cd /tmp && mkdir -p $CONDA_DIR && \
-    wget "https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Mambaforge-24.3.0-0-Linux-x86_64.sh" && \
+    wget --no-check-certificate "https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Mambaforge-24.3.0-0-Linux-x86_64.sh" && \
     bash Mambaforge-24.3.0-0-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
     rm -f Mambaforge-24.3.0-0-Linux-x86_64.sh && \
     $CONDA_DIR/bin/mamba install -y --channel conda-forge --channel bioconda htslib==1.20 samtools==1.20 bedtools=2.31 pandas==2.0.2 pybedtools==0.9.0 openpyxl==3.1.2 scipy==1.11.4 cython cyvcf2==0.30.28 pysam==0.22.1 statsmodels pyranges==0.0.129 SQLAlchemy && \
