--- a/docker-bsseq/Dockerfile
+++ b/docker-bsseq/Dockerfile
@@ -30,7 +30,7 @@ RUN apt-get update && apt-get -y install \
 RUN R -e "install.packages('BiocManager'); BiocManager::install(version = '3.19')"
 
 # Install required R and Bioconductor packages
-RUN R -e "install.packages(c('argparse', 'data.table', 'tidyverse')); \
+RUN R -e "install.packages(c('argparse', 'data.table', 'tidyverse', 'vcfR')); \
     BiocManager::install(c('HDF5Array', 'bsseq', 'DSS', 'GenomicRanges', 'IRanges', 'methylKit'))"
 
 # Entry point for the container
