--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -43,7 +43,7 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     git-lfs \
     smbclient \
     groff \
-    mailutils
+    mailutils \
     && apt-get clean all
 
 #set timezone to CDT
