--- a/docker-rbioconductor/Dockerfile
+++ b/docker-rbioconductor/Dockerfile
@@ -18,7 +18,9 @@ RUN apt-get update && apt-get -y install \
     libxt6 \
     libglpk-dev \
     libmysqlclient21 \
-    libcurl4-openssl-dev && \
+    libcurl4-openssl-dev \
+    python3 \
+    python3-pip && \
     apt-get clean
 
 # Install basic  R packages
@@ -27,16 +29,6 @@ RUN R -e "install.packages(c('argparse', 'data.table', 'dplyr', 'tidyverse', 'ti
 # Install Bioconductor and packages
 RUN R -e "install.packages('BiocManager'); BiocManager::install(version = '3.19')"
 RUN R -e "BiocManager::install(c('HDF5Array', 'bsseq', 'DSS', 'GenomicRanges', 'IRanges', 'methylKit'))"
-
-ARG MAMBA_VERSION="24.3.0-0"
-
-ENV CONDA_DIR /opt/conda
-COPY env/*.yml /tmp/
-RUN curl -L -O "https://github.com/conda-forge/miniforge/releases/download/${MAMBA_VERSION}/Miniforge3-$(uname)-$(uname -m).sh" && \
-    bash Miniforge3-$(uname)-$(uname -m).sh -f -b -p /opt/conda && \
-    rm -f Miniforge3-$(uname)-$(uname -m).sh && \
-    $CONDA_DIR/bin/mamba env update -n base -f /tmp/basic-tools.yml && \
-    $CONDA_DIR/bin/conda clean -y --all
 
 # Entry point for the container
 CMD ["bash"]
