--- a/docker-methfast/Dockerfile
+++ b/docker-methfast/Dockerfile
@@ -45,7 +45,7 @@ RUN dpkg-reconfigure --frontend noninteractive tzdata
 # get dhslab/methfast from github
 WORKDIR /tmp/
 RUN wget --no-check-certificate https://github.com/dhslab/methfast/archive/refs/tags/methfast-0.1.tar.gz && \
-    tar -xvf methfast-0.1.tar.gz && \
+    tar -zxvf methfast-0.1.tar.gz && \
     cd methfast-methfast-0.1 && \
     make && make install && \
     rm -rf /tmp/methfast-0.1.tar.gz /tmp/methfast-methfast-0.1
