--- a/docker-biscuit/Dockerfile
+++ b/docker-biscuit/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:focal-20221130
 
 LABEL version="1.0"
-LABEL description="Image for archiving"
+LABEL description="Image with biscuit methyltion"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -13,6 +13,7 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     curl \
     g++ \
     git \
+    wget \
     less \
     libcurl4-openssl-dev \
     libpng-dev \
@@ -21,14 +22,9 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     make \
     ncurses-dev \
     pkg-config \
-    rsync \
-    unzip \
-    wget \
-    zip \
     zlib1g-dev \
     libbz2-dev \
     liblzma-dev \
-    bc \
     curl \
     tzdata \
     gawk \
@@ -36,10 +32,6 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     grep \
     evince \
     libnss-sss \
-    default-jdk \
-    default-jre \
-    groff \
-    mailutils \
     && apt-get clean all
 
 #set timezone to CDT
@@ -50,19 +42,11 @@ RUN dpkg-reconfigure --frontend noninteractive tzdata
 # Install conda (mamba version)
 ENV CONDA_DIR /opt/conda
 RUN cd /tmp && mkdir -p $CONDA_DIR && \
-    wget "https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Mambaforge-24.3.0-0-Linux-x86_64.sh" && \
+    wget --no-check-certificate "https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Mambaforge-24.3.0-0-Linux-x86_64.sh" && \
     bash Mambaforge-24.3.0-0-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
     rm -f Mambaforge-24.3.0-0-Linux-x86_64.sh && \
-    $CONDA_DIR/bin/mamba install -y --channel conda-forge --channel bioconda python=3.11 pandas openpyxl cython globus-cli SQLAlchemy biotite pyodbc boto3 && \
+    $CONDA_DIR/bin/mamba install -y --channel conda-forge --channel bioconda biscuit && \
     $CONDA_DIR/bin/conda clean -y --all && \
     ln -s /opt/conda/bin/* /usr/local/bin/
-
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
-    unzip awscliv2.zip && ./aws/install
     
-# install https://github.com/dhslab/dhslab-archive.git
-RUN cd /tmp/ && git clone https://github.com/dhslab/dhslab-archive.git && \
-    cp /tmp/dhslab-archive/slarchive.py /usr/local/bin/ && \
-    chmod a+x /usr/local/bin/slarchive.py
-
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
