--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -1,52 +1,55 @@
-name: Push Container to ghcr.io
+name: Build and Push Changed Containers
 
 on:
   push:
-    paths:
-      - '**/Dockerfile'
+    branches:
+      - main # Or your default branch
 
 jobs:
-  # This job identifies changed Dockerfiles and creates a build matrix.
-  get-container-names:
+  # This job discovers which service directories have changed.
+  determine-build-matrix:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{ steps.create-matrix.outputs.matrix }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Needed by tj-actions/changed-files to compare commits
+          # Fetch all history so tj-actions/changed-files can compare commits
+          fetch-depth: 0
 
       - name: Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@v44 # Use a more recent version
+        uses: tj-actions/changed-files@v44
 
-      - name: Create build matrix for changed containers
-        id: set-matrix
+      - name: Create build matrix for changed services
+        id: create-matrix
+        # Using jq is more robust and readable than manual string manipulation.
+        # GitHub runners have jq pre-installed.
         run: |
-          # The 'paths' trigger ensures all files are Dockerfiles.
-          # We get the directory name of each Dockerfile path.
-          # For a path like 'services/api/Dockerfile', this becomes 'services/api'.
-          # This assumes the directory path is the desired container name context.
-          paths=$(for file in ${{ steps.changed-files.outputs.all_changed_files }}; do echo "\"$(dirname "$file")\""; done | sort -u | tr '\n' ',' | sed 's/,$//')
-          
-          # We construct a valid JSON object for the strategy matrix.
-          # e.g., {"include":[{"path":"services/api"},{"path":"services/web"}]}
-          echo "matrix={\"include\":[$(echo $paths | sed 's/"\([^"]*\)"/{"path":"\1"}/g')]}" >> $GITHUB_OUTPUT
-  
-  # This job builds and pushes the container images based on the matrix.
-  push-docker-image:
-    needs: get-container-names
+          paths=$(echo '${{ steps.changed-files.outputs.all_changed_files }}' | xargs -n1 dirname | sort -u)
+          matrix=$(echo "$paths" | jq -R '{"include": [{"path": .}]}' | jq -s 'add')
+          echo "matrix=${matrix}" >> $GITHUB_OUTPUT
+
+  # This job builds and pushes images based on the matrix from the previous job.
+  build-and-push:
+    needs: determine-build-matrix
+    # Only run this job if the matrix is not empty
+    if: ${{ needs.determine-build-matrix.outputs.matrix != '{"include":[]}' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write # Required to push to GitHub Container Registry
+      packages: write # Required to push to GitHub Container Registry (ghcr.io)
     strategy:
       fail-fast: false
-      matrix: ${{ fromJSON(needs.get-container-names.outputs.matrix) }}
+      # Use the JSON output from the 'determine-build-matrix' job
+      matrix: ${{ fromJSON(needs.determine-build-matrix.outputs.matrix) }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -59,16 +62,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
+          # Creates an image name based on the directory path
           images: ghcr.io/${{ github.repository_owner }}/${{ matrix.path }}
           tags: |
-            # Tag with 'latest'
             type=raw,value=latest,enable=true
-            # Tag with date format YYMMDD
             type=raw,value={{date 'YYMMDD'}},enable=true
 
       - name: 🚀 Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          # The context is the specific service directory from the matrix
           context: ./${{ matrix.path }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
