--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -18,9 +18,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get changed files
+      - name: Get changed Dockerfiles
         id: changed-files
         uses: tj-actions/changed-files@v44
+        with:
+          # Only report changes to files named Dockerfile anywhere in the repo
+          files: '**/Dockerfile'
 
       - name: Create build matrix for changed services
         id: create-matrix
