--- a/docker-scge-report/Dockerfile
+++ b/docker-scge-report/Dockerfile
@@ -7,16 +7,18 @@ ENV DEBIAN_FRONTEND=noninteractive
 COPY --chown=$MAMBA_USER:$MAMBA_USER scge_report_env.yaml /tmp/env.yaml
 
 # Install dependencies into the base environment
-# We install into 'base' to avoid needing 'conda activate' logic in Nextflow
 RUN micromamba install -y -n base -f /tmp/env.yaml && \
     micromamba clean --all --yes
 
-# Add the micromamba bin directory to PATH explicitly (ensure quarto is found)
-ENV PATH="/opt/conda/bin:$PATH"
+# IMPORTANT: This ARG is required for the "RUN" commands below to see the environment
+# It tells the base image's entrypoint to activate the 'base' environment
+ARG MAMBA_DOCKERFILE_ACTIVATE=1
 
 # Verify installation
 RUN quarto check install
 
+# Set the PATH for the final image so nextflow doesn't need 'conda activate'
+ENV PATH="/opt/conda/bin:$PATH"
+
 # Set the working directory
 WORKDIR /data
-
